@startuml

hide methods
hide stereotypes
skinparam linetype ortho

entity "dim_date" as dim_date {
  * id_date : INT <<PK>>
  --
  fecha : DATE
  anio : INT
  trimestre : INT
  mes : INT
  nombre_mes : VARCHAR(20)
}

entity "dim_sistema" as dim_sistema {
  * id_sistema : INT <<PK>>
  --
  nombre_sistema : VARCHAR(100)
  tipo_sistema : VARCHAR(100)
  pais : VARCHAR(100)
}

entity "dim_tecnologia" as dim_tecnologia {
  * id_tecnologia : INT <<PK>>
  --
  tecnologia : VARCHAR(100)
  categoria_tecnologia : VARCHAR(100)
  tipo_recurso : VARCHAR(100)
  es_renovable : BOOLEAN
}

entity "fact_generacion_electrica" as fact_generacion {
  * id_generacion : INT <<PK>>
  --
  * id_date : INT <<FK>>
  * id_sistema : INT <<FK>>
  * id_tecnologia : INT <<FK>>
  energia_generada_gwh : DECIMAL(20,6)
}

dim_date ||--o{ fact_generacion
dim_sistema ||--o{ fact_generacion
dim_tecnologia ||--o{ fact_generacion

@enduml
